# p4-cache

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  configuration.md  deployment.md  p4-cache-guide.md
include/meridian/core/: compat.hpp  constants.hpp  thread_pool.hpp
include/meridian/proxy/: cache_config.hpp  depot_cache.hpp  depot_watcher.hpp
include/meridian/storage/: backend.hpp
include/p4cache/: cache_config.hpp  depot_cache.hpp  depot_watcher.hpp  metrics.hpp
package/: build-deb.sh
src/: access_tool.cpp  cache_config.cpp  depot_cache.cpp  depot_watcher.cpp  main.cpp  metrics.cpp  shim.cpp  storage_backend.cpp
tests/: p4_storage_benchmark.sh  test_cache.cpp
